recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: identifier expected but ')' found.
    carre(100.)
              ^FourSquare:14: error: identifier expected but ')' found.
  	droite(90.)
                  ^