recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  for(i<-0 to 3)
  {
    carre(100.)
    
  }
  
}

def carre(cote:Double) {
  for(i<-0 to 3)
  {
    avance(cote)
  	droite(90.)
  }
  avance(cote)
}